# PhotoTakeoutSorter

./: 20240426_093251.heic  LICENSE  README.md  byYYMM.py  pyproject.toml  test.py
.github/workflows/: python-app.yml
