[project]
name = "phototakeoutsorter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "defusedxml>=0.7.1",
    "piexif>=1.1.3",
    "pillow>=11.3.0",
    "pillow-heif>=1.1.1",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "pytest>=8.4.2",
]
